implemenation of TextBinding

--- a/views/WorkspaceView.ui
+++ b/views/WorkspaceView.ui
@@ -18,6 +18,9 @@
     <widget class="QLineEdit" name="edt_sample"/>
    </item>
    <item>
+    <widget class="QLineEdit" name="edt_sample2"/>
+   </item>
+   <item>
     <widget class="QPushButton" name="btn_load_workspaces">
      <property name="text">
       <string>Load</string>
